# tmk_dcl_certification

./: .gitignore  CMakeLists.txt  Config.cmake  README.md
aravis/: CMakeLists.txt
aravis/cmake/: Findaravis.cmake
dbpg/: CMakeLists.txt  README.md
dbpg/include/dbpg/: DescriptorsDB.h  Filesystem.h
dbpg/scripts/: client_privileges.sql  create-db.sh  delete_db.sh  notify_trigger.sql  table_trigger.sql  tmk_db.sql
dbpg/src/: DescriptorsDB.cpp  Filesystem.cpp
dbpg/tests/: FsStorageTests.cpp
dclcomponents/: CMakeLists.txt  README.md  first.cpp  last.cpp  manager.cpp  middle.cpp  middle.py  pgmiddle.cpp  server.c  tcpcamera.cpp
dclcomponents/config/: pipeline_default.json  pipeline_test_savemiddle.json
dclcomponents/defectmiddle/: CMakeLists.txt  README.md
dclcomponents/defectmiddle/data/: data_description.txt  defectmiddle.json  pipeline_with_defectmiddle.json
dclcomponents/defectmiddle/include/: DefectMiddle.h  defectdetection.h
dclcomponents/defectmiddle/src/: DefectMiddle.cpp  defectdetection.cpp  defectmiddleblock.cpp
dclcomponents/defectmiddle/tests/: DefectDetectionMiddleBlockTests.cpp
dclcomponents/savemiddle/: CMakeLists.txt  README.md
dclcomponents/savemiddle/include/: savemiddle.h
dclcomponents/savemiddle/src/: SaveMiddleBlock.cpp  savemiddle.cpp
dclcomponents/savemiddle/tests/: SaveMiddleBlockTests.cpp
dclprocessor/: CMakeLists.txt  dclprocessor.pc.in
dclprocessor/collector/: CMakeLists.txt  dclcollector.pc.in
dclprocessor/collector/examples/: simple_collector.c
dclprocessor/collector/include/collector/: collector.h  collector_description.h  source.h  source_description.h
dclprocessor/collector/src/: collector.c  collector_description.c  source.c  source_description.c
dclprocessor/pipeline/: CMakeLists.txt
dclprocessor/pipeline/config/: CMakeLists.txt  README.md
dclprocessor/pipeline/config/data/: ill_test.json
dclprocessor/pipeline/config/src/: config.cpp
dclprocessor/pipeline/examples/: CMakeLists.txt  pipeline_examples.c  pserver.c
dclprocessor/pipeline/src/: pipeline.c  pipeline_client.c  pipeline_description.c  pipeline_examples.c  pipeline_module.c  pipeline_module_description.c  pipeline_ok.c  pipeline_server.c  process_mngr.c  shared_memory.c  signal_reaction.c
dclprocessor/processor/: CMakeLists.txt
dclprocessor/processor/examples/: first_block.c  middle_block.c  server.c
dclprocessor/processor/src/: dclprocessor.c  dclprocessor.cpp  dclprocessor_description.c  dclprocessor_old.cpp  pipeline.c
dclprocessor/tcp/: CMakeLists.txt
dclprocessor/tcp/src/: command_server.c  messenger.c  tcp_process.c
dclweb/: README.md  (+2 more)
libcapture/: CMakeLists.txt  dclcapture.pc.in
libcapture/src/: gige_camera.c  gige_camera_ops.c  gvcp.c
libcapture/tools/TMKCameraCalibrator/: CMakeLists.txt  CalibrationTools.cpp  CalibrationTools.h  main.cpp
libcapture/tools/blinking_with_custom_frequency/: README.md
libcommon/: CMakeLists.txt
libcommon/include/libcommon/: FakeCameraConfig.h  IJsonSaveable.h  PipelineConfig.h  ServerSettings.h  config_exceptions.h  config_factory.h  configuration_c.h  configurator.h  meta_info.h  server_settings_c.h  time_utils.h
libcommon/src/configuration/: FakeCameraConfig.cpp  PipelineConfig.cpp  ServerSettings.cpp  config_exceptions.cpp  config_factory.cpp  configuration_c.cpp  configurator.cpp  meta_info.cpp
libcommon/tests/configuration/: CMakeLists.txt  c_interface_test.cpp  dedicated_configs_test.cpp  load_save_test.cpp
libdclalgo/: CMakeLists.txt  README.md  dclalgo.pc.in
libdclalgo/data/: data_description.txt
libdclalgo/include/: AzimuthEvaluation.h  CommonFunctions.h  EdgeAware.h  ImageKeeper.h  LibraryParameters.h  MapToMat.h  PolarDecomposition.h  PolarExpand.h  ZenithEvaluation.h  interp1.h
libdclalgo/src/: AzimuthEvaluation.cpp  CommonFunctions.cpp  EdgeAware.cpp  LibraryParameters.cpp  PolarDecomposition.cpp  PolarExpand.cpp  ZenithEvaluation.cpp  interp1.cpp
libdclalgo/tests/: AzimuthEvaluationTests.cpp  EdgeAwareTests.cpp  ImageKeeperTests.cpp  ImagesTests.cpp  MapToMatTests.cpp  PolarDecompositionTests.cpp  PolarExpandTests.cpp  ZenithEvaluationTests.cpp
libdclalgo/tools/: CMakeLists.txt  Expander.cpp  GetImageMaps.cpp
libdclfilters/: CMakeLists.txt  README.md  dclfilters.pc.in
libdclfilters/examples/: cvradius.c  cvradius.cpp  cvshow.py
libdclfilters/include/dclfilters/: cvfilter.h  cvtools.h
libdclfilters/python/: motion_detector.py  requirements.txt  test.py  test_cases.json
libdclfilters/src/: cvfilter.cpp  cvfilter_c.cpp  cvtools.cpp
libdclfilters/tests/: FilterTests.cpp
libdclfilters/tools/: cvanalyzer.cpp  cvshow.cpp  raw2bmp.c
libstorage/: CMakeLists.txt  README.md
libstorage/include/storage/: Defect.h  Frame.h  FrameData.h  FrameDataSet.h  Frameset.h  IObject.h  Ipc.h  IpcTypes.h  ObjectData.h  ObjectDescriptor.h  ObjectRef.h  StorageTypes.h  Time.h  storage_interface.h
libstorage/src/: Defect.cpp  Frame.cpp  FrameData.cpp  FrameDataSet.cpp  Frameset.cpp  Ipc.cpp  IpcTypes.cpp  ObjectData.cpp  ObjectDescriptor.cpp  storage_interface.cpp
libstorage/tests/: StorageTests.cpp
misc/: CMakeLists.txt  misc.pc.in
misc/examples/: log_example.c
misc/include/misc/: list.h  log.h  name_generator.h
misc/src/: log.c  ring_buffer.c
tools/aravis/: CMakeLists.txt
tools/aravis/demos/: demo_capture_thread.cc  main_say2camera.c
tools/aravis/src/: CameraMetaData.cpp  arv_capture_thread.c
tools/aravis/tools/: cammeta.cpp
tools/spinnaker/: CMakeLists.txt  READ.ME
tools/spinnaker/configs/: polar.json  stereo.json
tools/spinnaker/include/: PreviewWidget.h  captureManager.h  captureThread.h  configparser.h  configureCameras.h  global_sc.h  log.h  namingSystems.h  threadname.h  visitors.h
tools/spinnaker/scripts/: decode_frames.sh  get_ready.sh
tools/spinnaker/src/: Acquisition.cpp  PreviewWidget.cpp  PreviewWidget.ui  captureManager.cpp  captureThread.cpp  configparser.cpp  configureCameras.cpp  log.cpp  main_acquisition.cpp  main_decode.cpp  main_enum_cams.cpp  main_test_qtpreview.cpp  namingSystems.cpp  threadname.cpp  visitors.cpp
(+56 files in other folders)
